fix: Align status circle dot to pulse position

--- a/src/components/generic/StatusCircle.scss
+++ b/src/components/generic/StatusCircle.scss
@@ -8,7 +8,7 @@ div.status-circle-body {
     background-color: var(--theme-secondary);
     border-radius: 100%;
     z-index: 2;
-    position: relative;
+    position: absolute;
     user-select: none;
     pointer-events: none;
 }
@@ -39,6 +39,8 @@ div.status-circle-size-small {
     div.status-circle-body {
         width: 12px;
         height: 12px;
+        top: 0px;
+        left: 0px;
     }
 
     div.status-circle-pulse {
@@ -58,13 +60,15 @@ div.status-circle-size-default {
     div.status-circle-body {
         width: 16px;
         height: 16px;
+        top: -18px;
+        left: -18px;
     }
 
     div.status-circle-pulse {
         width: 40px;
         height: 40px;
-        top: -12px;
-        left: -12px;
+        top: -30px;
+        left: -30px;
     }
 
     div.status-circle-tooltip {
